2006-12-28  Albert Chu <chu11@llnl.gov>

	* ipmipower/ipmipower.8.in: Add some extra powerman info.
	
2006-12-15  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/ipmi-cipher-suite-spec.h,
	libfreeipmi/include/freeipmi/ipmi-device-global-cmds.h,
	libfreeipmi/include/freeipmi/udm/ipmi-udm.h: Include stdint.h.

	* ipmiconsole/src/libipmiconsole/ipmiconsole.h: Add g++
	compatibility definitions.

	* Globally remove HAVE_STDINT_H.

	* libfreeipmi/include/: Various header file cleanup.

	* Applied FreeBSD OpenIPMI support patch from Dmitry Frolov
	<frolov at riss-telecom dot ru>.

	* configure.ac: Search for linux/ipmi.h and sys/ipmi.h.

	* libfreeipmi/src/ipmi-openipmi-api.c: Load and use appropriate
	headers when available.

	* ipmi-sensors/src/ipmi-sensors.c (init_sdr_cache, run_cmd_args),
	ipmi-sensors/src/ipmi-sensors-argp.h,
	ipmi-sensors/src/ipmi-sensors-argp.c (parse_opt,
	ipmi_sensors_argp_parse): Support -Q option.

	* ipmi-sel/src/ipmi-sel.c (init_sdr_cache, run_cmd_args),
	ipmi-sel/src/ipmi-sel-argp.h, ipmi-sel/src/ipmi-sel-argp.c
	(parse_opt, ipmi_sel_argp_parse): Support -Q option.
	
	* ipmi-sensors/ipmi-sensors.8.pre.in, ipmi-sel/ipmi-sel.8.pre.in:
	Updated with -Q option.
	
2006-12-15  Anand Babu  <ab@zresearch.com>

	* libfreeipmi/include/: g++ compatibility definitions.

2006-12-12  Albert Chu <chu11@llnl.gov>

	* Applied FreeBSD support patch from Dmitry Frolov <frolov at
	riss-telecom dot ru>.

	* freeipmi.spec.in: Added zresearch copying and disclaimer files.
	
2006-12-08  Anand Babu  <ab@zresearch.com>

	* common/src/ipmi-sdr-api.c: fixes the "SDR cache creation under
	/tmp" bug reported by Tejram Meena <tejram@in.niksun.com>.

	* ipmi-sensors/src/ipmi-sensors.c: give proper error message when
	cache creation fails.

	* DISCLAIMER.ZRESEARCH and COPYING.ZRESEARCH: newly added.

	* libfreeipmi/src/ipmi-rmcpplus-debug.c
	(ipmi_dump_rmcpplus_packet): initialized certain variables to zero
	to avoid GCC warning.
